
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct hostent {scalar_t__ h_addr; } ;


 int exit (int) ;
 int fprintf (int ,char*,char*) ;
 struct hostent* gethostbyname (char*) ;
 long inet_addr (char*) ;
 int stderr ;

int
resolv (char *host, long *ip)
{
      struct hostent *hp;

      if ((*ip = inet_addr (host))<0)
      {
        if ((hp = gethostbyname (host)) == ((void*)0))
        {
          fprintf (stderr, "%s: unknown host\n", host);
          exit (-1);
        }
       *ip = *(unsigned long *) hp->h_addr;
     }
  return 0;
}
