; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_20950.c_resolv.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_20950.c_resolv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostent = type { i64 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"%s: unknown host\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @resolv(i8* %0, i64* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca %struct.hostent*, align 8
  store i8* %0, i8** %3, align 8
  store i64* %1, i64** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i64 @inet_addr(i8* %6)
  %8 = load i64*, i64** %4, align 8
  store i64 %7, i64* %8, align 8
  %9 = icmp slt i64 %7, 0
  br i1 %9, label %10, label %26

10:                                               ; preds = %2
  %11 = load i8*, i8** %3, align 8
  %12 = call %struct.hostent* @gethostbyname(i8* %11)
  store %struct.hostent* %12, %struct.hostent** %5, align 8
  %13 = icmp eq %struct.hostent* %12, null
  br i1 %13, label %14, label %19

14:                                               ; preds = %10
  %15 = load i32, i32* @stderr, align 4
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @fprintf(i32 %15, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8* %16)
  %18 = call i32 @exit(i32 -1) #3
  unreachable

19:                                               ; preds = %10
  %20 = load %struct.hostent*, %struct.hostent** %5, align 8
  %21 = getelementptr inbounds %struct.hostent, %struct.hostent* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = inttoptr i64 %22 to i64*
  %24 = load i64, i64* %23, align 8
  %25 = load i64*, i64** %4, align 8
  store i64 %24, i64* %25, align 8
  br label %26

26:                                               ; preds = %19, %2
  ret i32 0
}

declare dso_local i64 @inet_addr(i8*) #1

declare dso_local %struct.hostent* @gethostbyname(i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
